--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - "master"
+      - "main"
 
 jobs:
   deploy:
@@ -12,8 +12,13 @@ jobs:
         - uses: actions/checkout@v2
           with:
             fetch-depth: 0
-        - uses: wangchucheng/git-repo-sync@v0.1.0
-          with:
-            target-url: 'https://github.com/mboxplus/mbox.wiki.git'
-            target-username: 'MBox Runner'
-            target-token: ${{ secrets.ACCESS_TOKEN }}
+        - name: Setup Git Access
+          run: |
+            git config --global url."https://${{ secrets.ACCESS_TOKEN }}@github".insteadOf https://github
+            git config --global user.email "mbox.runner@mbox.com"
+            git config --global user.name "MBox Runner"
+        - name: Sync Repo
+          run: |
+            git add remote target https://github.com/MBoxPlus/mbox.wiki.git
+            git push -f --all target main:master
+            git push -f --tags target main:master
